# wasmcloud-graphql-provider

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml  make.mjs  package.json  run.mjs  run.sh  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
actor/: .gitignore  Cargo.toml  Dependencies  Makefile  README.md  build.mjs  make.mjs
actor/src/: lib.rs
automation/: dev.sh  docker-compose.yaml  down.mjs  lib.mjs  query.json  run.mjs  up.mjs
automation/migrations/: 20211104114350_init.down.sql  20211104114350_init.up.sql
interface/: .gitignore  Makefile  codegen.toml  graphql-provider.smithy
interface/rust/: Cargo.toml
interface/rust/src/: graphql_provider.rs  lib.rs
provider/: .gitignore  Cargo.toml  Makefile  make.mjs  package.json  query.json  tsconfig.json
provider/node/src/: config.ts
provider/rust/: Cargo.toml  build.rs
provider/rust/src/: main.rs  unpack_files.rs  upstream.rs
provider/src/: config.ts  index.ts  main.rs  unpack_files.rs  upstream.rs
src/: config.ts  index.ts  main.rs  middleware.ts
