[package]
edition = "2018"
exclude = ["index.node"]
name = "node-from-rust"
version = "0.1.0"

[dependencies]
nodejs = "0.2.2"

[build-dependencies]
anyhow = "1"
hex = "0.4"
once_cell = "1"
sha-1 = "0.9"
strum = {version = "0.22.0", features = ["derive"]}
zip-extract = "0.1"

[build-dependencies.attohttpc]
default-features = false # No need for the compress feature
features = ["tls-rustls"] 
version = "0.18.0"
