[package]
authors = ["stuart.harris@red-badger.com"]
edition = "2021"
name = "pass_through"
rust-version = "1.56.0"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.51"
futures = "0.3.17"
log = "0.4.14"
serde = {version = "1.0.130", features = ["derive"]}
serde_bytes = "0.11"
wasmbus-rpc = "=0.4.4"
wasmcloud-graphql-interface = {path = "../interface/rust"}
wasmcloud-interface-httpserver = "0.1.11"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
