[package]
authors = ["stuart.harris@red-badger.com"]
edition = "2018"
license = "MIT"
name = "wasmcloud-graphql-provider"
resolver = "2"
version = "0.1.0"

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
futures = "0.3.17"
log = "0.4.14"
nodejs = "0.2.2"
wasmbus-rpc = "0.5.1"
wasmcloud-graphql-interface = {path = "../interface/rust"}

[build-dependencies]
anyhow = "1.0.44"
hex = "0.4"
once_cell = "1"
sha-1 = "0.9"
strum = {version = "0.22.0", features = ["derive"]}
zip-extract = "0.1"

[build-dependencies.attohttpc]
default-features = false # No need for the compress feature
features = ["tls-rustls"] 
version = "0.18.0" 

[[bin]]
name = "wasmcloud-graphql-provider"
path = "src/main.rs"
