[package]
authors = ["stuart.harris@red-badger.com"]
edition = "2021"
license = "MIT"
name = "wasmcloud-graphql-provider"
rust-version = "1.56.0"
version = "0.1.0"

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
flate2 = "1.0.22"
futures = "0.3.17"
nodejs = "0.2.2"
tar = "0.4.37"
temp-dir = "0.1.11"
tokio = {version = "1.12.0", features = ["full"]}
wasmbus-rpc = "0.5.1"
wasmcloud-graphql-interface = {path = "../interface/rust"}

[build-dependencies]
anyhow = "1.0.44"
hex = "0.4"
once_cell = "1"
sha-1 = "0.9"
strum = {version = "0.22.0", features = ["derive"]}
zip-extract = "0.1"

[build-dependencies.attohttpc]
default-features = false # No need for the compress feature
features = ["tls-rustls"] 
version = "0.18.0" 

[[bin]]
name = "wasmcloud-graphql-provider"
path = "src/main.rs"
