[package]
authors = ["stuart.harris@red-badger.com"]
description = "Interface library for GraphQL capability, "
edition = "2018"
license = "MIT"
name = "wasmcloud-graphql-interface"
version = "0.1.0"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = ["build.rs"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_json = "1.0.68"
wasmbus-rpc = "0.5.1"

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.2.1"
