[package]
authors = ["stuart.harris@red-badger.com"]
description = "Interface library for GraphQL capability, "
edition = "2021"
license = "MIT"
name = "wasmcloud-graphql-interface"
rust-version = "1.56.0"
version = "0.1.0"

# when publishing to crates.io, freeze src by omitting build.rs
exclude = ["build.rs"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
async-trait = "0.1.51"
futures = "0.3.17"
serde = {version = "1.0.130", features = ["derive"]}
serde_bytes = "0.11.5"
serde_json = "1.0.68"
wasmbus-rpc = "0.5.2"

[dev-dependencies]
base64 = "0.13.0"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.2.3"
