[package]
authors = ["stuart.harris@red-badger.com"]
edition = "2021"
license = "MIT"
name = "wasmcloud-graphql-provider"
rust-version = "1.56.0"
version = "0.1.0"

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.51"
flate2 = "1.0.22"
futures = "0.3.18"
log = "0.4.14"
nanoid = "0.4.0"
nodejs = "=0.2.2"
once_cell = "1.8.0"
tar = "0.4.37"
temp-dir = "0.1.11"
tokio = {version = "1.14.0", features = ["full"]}
wasmbus-rpc = "0.6.0"
wasmcloud-graphql-interface = {path = "../../interface/rust"}

[build-dependencies]

anyhow = "1.0.51"
hex = "0.4.3"
once_cell = "1.8.0"
sha-1 = "0.9.8"
strum = {version = "0.23.0", features = ["derive"]}
zip-extract = "0.1.0"

[build-dependencies.attohttpc]
default-features = false # No need for the compress feature
features = ["tls-rustls"] 
version = "0.18.0" 

[[bin]]
name = "wasmcloud-graphql-provider"
path = "src/main.rs"
